# pubcrawler

./: .gitignore  CHANGELOG.md  README.md  environment.yml  prepare_project.py  pyproject.toml  settings.ini
adu_template_main/: __init__.py  _modidx.py  const.py  fetch_spec.json
adu_template_main/cli/: core.py  foo.py
adu_template_main/core/: 01_first_steps.py
adu_template_main/tools/: __init__.py  foo.py
adu_template_main/utils/: general.py
nbs/: _quarto.yml  batch.ipynb  const.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/cli/: cli_01_core.ipynb  cli_02_foo.ipynb
nbs/core/: 01_clean.ipynb  01_first_steps.ipynb  02_crawl.ipynb  03_download.ipynb  04_metadata.ipynb  05_analysis.ipynb  06_archive.ipynb
nbs/tools/: 01_foo.ipynb
nbs/utils/: utils_01_general.ipynb
pubcrawler/: __init__.py  _modidx.py  const.py  fetch_spec.json
pubcrawler/cli/: __main__.py  core.py  foo.py
pubcrawler/core/: 01_clear_dir.py  01_first_steps.py  02_crawl.py  03_download.py  04_metadata.py  05_analyse.py  05_met.py  06_archive.py  __init__.py
pubcrawler/style/: autonomy_white.mplstyle
pubcrawler/tools/: foo.py
pubcrawler/utils/: general.py
