[tool.poetry]
name = "pubcrawler"
version = "0.1.0"
description = ""
authors = ["seangreaves <greaves.sean@btinternet.com>"]
readme = "README.md"
include = [
    { path = "CHANGELOG.md", format = ["sdist", "wheel"] },
    { path = "README.md", format = ["sdist", "wheel"] }
]
exclude = ["pubcrawler/store/*"]


[tool.poetry.dependencies]
python = "^3.10,<3.13"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
adu-proj = {version = "^0.1.14", source = "adu"}
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
requests = "^2.31.0"
tqdm = "^4.66.1"
pypdf2 = "^3.0.1"
openai = "^1.3.7"
python-dotenv = "^1.0.0"
networkx = "^3.2.1"
pyvis = "^0.3.2"
plotly = "^5.18.0"
jupyter-dash = "^0.4.2"
jupyterlab = "3.6"
python-levenshtein = "^0.23.0"
pycryptodome = "^3.19.0"
boto3 = "^1.34.4"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "adu"
url = "https://pip.autonomy.work"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
nbdev = "^2.3.13"
adu-tools = {version = "^0.2.33", source = "adu"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
